Update 'ss-tt-erer' component image to: quay.io/rhtaptestqa/test:0db58b0a0618d0d53379a5c7592c81b9df75ef20@sha256:61186f5fc537ad49198c19fe409e9ad729661ded1e15858eec44b505918b45b5

--- a/components/ss-tt-erer/overlays/development/deployment-patch.yaml
+++ b/components/ss-tt-erer/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ss-tt-erer
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtaptestqa/test:0db58b0a0618d0d53379a5c7592c81b9df75ef20@sha256:61186f5fc537ad49198c19fe409e9ad729661ded1e15858eec44b505918b45b5
+          name: container-image
